Fix line spacing in learning map table

--- a/src/css/pages/learning-map.css
+++ b/src/css/pages/learning-map.css
@@ -5,6 +5,11 @@
       padding-left: 0;
     }
 
+    & p {
+      margin-bottom: 0;
+      margin-top: 0;
+    }
+
     & li p {
       padding-bottom: 0;
     }
